--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
        
         
         <footer>
-            <img src="facebook_logo.jpg" alt="facebook_logo" height="60px">
-            <img src="instagram_logo.jpg" alt="instagram_logo" height="60px">
+            <img src="facebook_logo.png" alt="facebook_logo" height="60px">
+            <img src="instagram_logo.png" alt="instagram_logo" height="60px">
             <img src="youtube_logo.png" alt="youtube_logo" height="60px">
-            <img src="twitter_logo.webp" alt="twitter_logo" height="60px">
+            <img src="twitter_logo.png" alt="twitter_logo" height="60px">
             <img src="google+_logo.png" alt="google_logo" height="60px">
         </footer>
 
