basically working on contact page and minor touch ups on other pages

--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,33 @@
             </nav>
         </header>
 
+        <div class="title">
+            <h5>Contact Us</h5>
+            <h2>Get In Touch With Us</h2>
+        </div>
+
+        <div class="main_content">
+
+            <div class="contact_form">
+                <form>
+                    <label for="fname">First name:</label>
+                    <input type="text" id="fname" class="responses" name="fname" required><br>
+                    <label for="lname">Last name:</label>
+                    <input type="text" id="lname" class="responses" name="lname" required><br>
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" class="responses" name="email"><br>
+                    <label for="number">Phone Number:</label>
+                    <input type="number" id="number" class="responses" name="number"><br>
+                    <label for="message">Message:</label>
+                    <input type="text" id="message" class="responses" name="message" required><br>
+                    <input type="Submit" id="submit"> 
+                </form>  
+            </div>
+
+                <img src="mountainBike_tall.jpeg" alt="tall_mountainbike_image" height="850px">
+
+        </div>
+
         <footer>
             <img src="facebook_logo.png" alt="facebook_logo" height="60px">
             <img src="instagram_logo.png" alt="instagram_logo" height="60px">
