removed all px values in my home page for images as don't need px

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="about_section">
-            <img src="about_image.jpg" alt="about_image" height="350px">
+            <img src="about_image.jpg" alt="about_image" height="350">
 
             <div class="learn_more">
                 <h2>LEARN MORE</h2>
@@ -55,16 +55,16 @@
                 
             </div>
 
-            <img src="contact_image.jpg" alt="contact_image" height="350px">
+            <img src="contact_image.jpg" alt="contact_image" height="350">
 
         </div>
 
         <footer>
-            <img src="facebook_logo.png" alt="facebook_logo" height="60px">
-            <img src="instagram_logo.png" alt="instagram_logo" height="60px">
-            <img src="youtube_logo.png" alt="youtube_logo" height="60px">
-            <img src="twitter_logo.png" alt="twitter_logo" height="60px">
-            <img src="google+_logo.png" alt="google_logo" height="60px">
+            <img src="facebook_logo.png" alt="facebook_logo" height="60">
+            <img src="instagram_logo.png" alt="instagram_logo" height="60">
+            <img src="youtube_logo.png" alt="youtube_logo" height="60">
+            <img src="twitter_logo.png" alt="twitter_logo" height="60">
+            <img src="google+_logo.png" alt="google_logo" height="60">
         </footer>
 
     </div>
