--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                     <label for="number">Phone Number:</label>
                     <input type="number" id="number" class="responses" name="number"><br>
                     <label for="message">Message:</label>
-                    <input type="text" id="message" class="responses" name="message" required><br>
+                    <textarea id="message" class="responses" name="message" rows="5" required></textarea><br>
                     <input type="Submit" id="submit"> 
                 </form>  
             </div>
