--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
                 <p>For years we have been convincing Kiwis to try <br>mountain biking out and all the replies we get back <br>from them are just unforgettable experiences.</p>
                 
                 <div class="contact_button">
-                    <a href="about.html">Contact Us</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
                 
             </div>
