--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 <body>
     <div class="page_container">
         <header>
-            <h1>RiderzPeak</h1>
+            <h1><a href="home.html">RiderzPeak</a></h1>
             <nav>
                 <ul>
                     <li><a href="home.html">Home</a></li>
