renaming all my alt tags for images

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 
         <div class="summary_section">
             <div class="summary_section_image">
-                <img src="about_page_image1.jpg" alt="about_page_image1" height="400px">
+                <img src="about_page_image1.jpg" alt="mountain_biker_jump" height="400px">
             </div>
 
             <div class="summary_text">
@@ -39,7 +39,7 @@
 
         <div class="information_section">
             <div class="info_column">
-                <img src="MountainBiking_benefits_image.webp" alt="Benefits Image" height="400px">
+                <img src="MountainBiking_benefits_image.webp" alt="Mountain_biker_sun_shot" height="400px">
                 <div class="info_block">
                     <h3>The Benefits Of Mountain Biking</h3>
                     <p> Mountain biking offers a plethora of benefits, encompassing both physical and mental well-being. 
@@ -51,7 +51,7 @@
             </div>
         
             <div class="info_column">
-                <img src="MountainBiking_gear_image.jpg" alt="Gear Image" height="400px">
+                <img src="MountainBiking_gear_image.jpg" alt="Mountain_biker_trail_image" height="400px">
                 <div class="info_block">
                     <h3>Gear Needed For Mountain Biking</h3>
                     <p> To enjoy mountain biking safely, riders need a sturdy mountain bike suitable for off-road trails, along 
