--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                 </form>  
             </div>
 
-                <img src="mountainBike_tall.jpeg" alt="tall_mountainbike_image" height="850px">
+                <img src="mountainBike_tall.jpeg" alt="tall_mountainbike_bushtrail_image" height="850px">
 
         </div>
 
