--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="about_section">
-            <img src="about_image.jpg" alt="about_image" height="350">
+            <img src="about_image.jpg" alt="2_mountain_bikers_image" height="350">
 
             <div class="learn_more">
                 <h2>LEARN MORE</h2>
@@ -55,7 +55,7 @@
                 
             </div>
 
-            <img src="contact_image.jpg" alt="contact_image" height="350">
+            <img src="contact_image.jpg" alt="mountain_biker_sunset_image" height="350">
 
         </div>
 
